<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/edit"
    android:layout_width="match_parent"
    android:backgroundTint="#66FFFFFF"
    android:backgroundTintMode="src_over"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
       android:orientation="vertical">


       <ImageView
           android:layout_width="200dp"
           android:layout_height="200dp"
           android:alpha="250"
           android:background="@drawable/freshafood"

           />

       <TextView
           android:id="@+id/text1"
           android:layout_width="200dp"
           android:layout_height="wrap_content"
           android:fontFamily="casual"
           android:gravity="center"
           android:text="@string/slogan"
           android:textAppearance="@style/TextAppearance.AppCompat"
           android:textSize="18sp"
           android:textStyle="bold"
           android:visibility="visible"
           />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="2">


    </LinearLayout>

    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:text="@string/signin"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/button2"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:text="@string/signup"
        android:textColor="@android:color/background_dark" />



</RelativeLayout>